Bootstrap React project and inject it to page

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/arnellebalane/unblock-me#readme",
   "devDependencies": {
     "parcel-bundler": "1.12.4"
+  },
+  "dependencies": {
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   }
 }
