--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parcel-bundler": "1.12.4"
   },
   "dependencies": {
+    "firebase": "7.8.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   }
